# spook

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  =0.3.2  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  hacs.json  pyproject.toml  renovate.json  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labels.yml  release-drafter.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: black.yaml  dependency-review.yaml  documentation.yaml  hacs.yaml  hacs.yml  hassfest.yaml  issues.yml  labels.yaml  pr-labels.yaml  pylint.yaml  release-drafter.yaml  release.yaml  release.yml  ruff.yaml  scorecard.yml  test.yaml  tests.yml  zizmor.yaml
custom_components/spook/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  entity.py  entity_filtering.py  event.py  integration_linking.py  listeners.py  manifest.json  models.py  number.py  repairs.py  select.py  sensor.py  services.py  services.yaml  setup_helpers.py  switch.py  templating.py  time.py  util.py
custom_components/spook/ectoplasms/: __init__.py
custom_components/spook/ectoplasms/cloud/: entity.py  switch.py
custom_components/spook/ectoplasms/homeassistant/: button.py  device.py  entity.py  sensor.py
custom_components/spook/ectoplasms/repairs/: button.py  entity.py  event.py  sensor.py
custom_components/spook/ectoplasms/sensor/: __init__.py
custom_components/spook/ectoplasms/spook/: __init__.py  storage.py
custom_components/spook/integrations/inverse/: const.py  entity.py  switch.py
custom_components/spook/integrations/spook_inverse/: __init__.py  binary_sensor.py  config_flow.py  const.py  cover.py  entity.py  manifest.json  switch.py
custom_components/spook/integrations/spook_template/: __init__.py  binary_sensor.py  config_flow.py  const.py  manifest.json  sensor.py
custom_components/spook/repairs/: __init__.py  automation_unknown_area_references.py  automation_unknown_device_references.py  automation_unknown_entity_references.py  group_unknown_members.py  integration_unknown_source.py  lovelace_unknown_entity_references.py  obsolete_integration_yaml_config.py  obsolete_platform_yaml_config.py  script_unknown_area_references.py  script_unknown_device_references.py  script_unknown_entity_references.py  switch_as_x_unknown_source.py
custom_components/spook/services/: __init__.py  blueprint_import.py  homeassistant_add_alias_to_area.py  homeassistant_add_device_to_area.py  homeassistant_add_entity_to_area.py  homeassistant_create_area.py  homeassistant_delete_all_orphaned_entities.py  homeassistant_delete_area.py  homeassistant_disable_config_entry.py  homeassistant_disable_device.py  homeassistant_disable_entity.py  homeassistant_disable_polling.py  homeassistant_enable_config_entry.py  homeassistant_enable_device.py  homeassistant_enable_entity.py  homeassistant_enable_polling.py  homeassistant_hide_entity.py  homeassistant_ignore_all_discovered.py  homeassistant_remove_alias_from_area.py  homeassistant_remove_all_orphaned_entities.py  homeassistant_remove_area.py  homeassistant_remove_device_from_area.py  homeassistant_remove_entity_from_area.py  homeassistant_set_area_aliases.py  homeassistant_unhide_entity.py  input_number_decrement.py  input_number_increment.py  input_number_max.py  input_number_min.py  input_select_random.py  input_select_shuffle.py  input_select_sort.py  number_decrease.py  number_decrement.py  number_increase.py  number_increment.py  number_max.py  number_min.py  recorder_import_statistics.py  repairs_create.py  (+7 more)
custom_components/spook/translations/: LICENSE.md  af.json  ar.json  be.json  bg.json  bn.json  bs.json  ca.json  cs.json  cy.json  da.json  de.json  el.json  en-GB.json  en.json  eo.json  es-419.json  es.json  et.json  eu.json  fa.json  fi.json  fr.json  fy.json  ga.json  gl.json  gsw.json  he.json  hi.json  hr.json  hu.json  hy.json  id.json  is.json  it.json  ja.json  ka.json  ko.json  lb.json  lt.json  (+30 more)
documentation/: README.md  _toc.yml  about.md  actions.md  areas.md  background_and_history.md  blueprints.md  code_of_conduct.md  core_extensions.md  development.md  devices.md  devices_entities.md  disclaimers.md  enhanced_integrations.md  entities.md  faq.md  features.md  floors.md  glossary.md  helpers.md  index.md  installation.md  integrations.md  integrations_devices.md  labels.md  license.md  media.md  misc.md  myst.yml  other_features.md  previous_features.md  security.md  services.md  support.md  template_engine.md  template_functions.md  usage.md  users.md
documentation/helpers/: inverse.md
documentation/integrations/: _template.md  automation.md  blueprint.md  cloud.md  group.md  input_number.md  input_select.md  integration.md  lovelace.md  number.md  person.md  proximity.md  recorder.md  repairs.md  scene.md  script.md  select.md  switch_as_x.md  timer.md  trend.md  utility_meter.md  zone.md
documentation/template_functions/: flatten.md  fnmatch.md  fnmatch_filter.md  md5.md  sha1.md  sha256.md  sha512.md  shuffle.md  typeof.md
tests/: __init__.py  conftest.py  test_config_flow.py  test_ectoplasm_discovery.py  test_entity_filtering.py  test_listeners.py  test_repairs_cleanup.py  test_service_translations.py  test_setup.py  test_translations.py  test_util.py
tests/ectoplasms/: __init__.py
tests/ectoplasms/automation/: __init__.py
tests/ectoplasms/automation/repairs/: __init__.py  test_unknown_device_references.py  (+2 more)
tests/ectoplasms/homeassistant/: __init__.py  test_sensor.py
tests/ectoplasms/input_number/: __init__.py
tests/ectoplasms/lovelace/: __init__.py
tests/ectoplasms/number/: __init__.py
tests/ectoplasms/recorder/: __init__.py
tests/ectoplasms/repairs/: __init__.py  test_event.py
tests/ectoplasms/script/: __init__.py
tests/ectoplasms/sensor/: __init__.py
tests/integrations/: __init__.py
tests/integrations/spook_inverse/: __init__.py  conftest.py  test_config_flow.py  test_cover.py  test_init.py
(+173 files in other folders)
